--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 
 <!-- Audio element for birthday song (hidden) -->
 <audio id="birthdaySong" loop>
-  <source src="C:\Users\nilam\OneDrive\Desktop\birthday-website\happy-birthday-314197.mp3" type="audio/mpeg">
+  <source src="https://github.com/Nilambari-Mahajan/nilambariA/blob/main/happy-birthday-314197.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
 </audio>
 
@@ -433,4 +433,5 @@ audio.addEventListener('error', function() {
 </script>
 
 </body>
+
 </html>
