--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 <!-- Screen 1: Welcome -->
 <div id="screen1" class="screen active">
   <h1>Happy Birthday Ayush 😼💕</h1>
-  <img class="screen-img" src="C:\Users\nilam\OneDrive\Desktop\birthday-website\imgserprise.jpg" alt="Birthday Cake">
+  <img class="screen-img" src="https://github.com/Nilambari-Mahajan/nilambariA/blob/main/imgserprise.jpg" alt="Birthday Cake">
   <p>little Surprise from me </p>
   <button onclick="showScreen('screen2')">Start</button>
 </div>
@@ -212,7 +212,7 @@
 <div id="screen2" class="screen">
   <button class="back-btn" onclick="showScreen('screen1')">← Back</button>
   <h2>Will you accept my gift? 💌</h2>
-  <img class="screen-img" src="C:\Users\nilam\OneDrive\Desktop\birthday-website\imggfritn.jpg" alt="Gift Box">
+  <img class="screen-img" src="https://github.com/Nilambari-Mahajan/nilambariA/blob/main/imggfritn.jpg" alt="Gift Box">
   <p> </p>
   <button onclick="showScreen('screen3')">YES</button>
   <button onclick="showScreen('angry')">No</button>
@@ -224,13 +224,13 @@
   <h2>Choose Any one!!</h2>
   <div class="gift-grid">
     <div class="gift-box" onclick="showScreen('memories')">
-      <img src="C:\Users\nilam\OneDrive\Desktop\birthday-website\imggg1.jpg" alt="Memories">
+      <img src="https://github.com/Nilambari-Mahajan/nilambariA/blob/main/imggg1.jpg" alt="Memories">
     </div>
     <div class="gift-box" onclick="showScreen('candle')">
-      <img src="C:\Users\nilam\OneDrive\Desktop\birthday-website\imgg2.jpg" alt="Cake">
+      <img src="https://github.com/Nilambari-Mahajan/nilambariA/blob/main/imgg2.jpg" alt="Cake">
     </div>
     <div class="gift-box" onclick="showScreen('loveletter')">
-      <img src="C:\Users\nilam\OneDrive\Desktop\birthday-website\imgg3.jpg" alt="Letter">
+      <img src="https://github.com/Nilambari-Mahajan/nilambariA/blob/main/imgg3.jpg" alt="Letter">
     </div>
   </div>
 </div>
@@ -435,3 +435,4 @@ audio.addEventListener('error', function() {
 </body>
 
 </html>
+
