--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 <!-- Screen 1: Welcome -->
 <div id="screen1" class="screen active">
   <h1>Happy Birthday Ayush 😼💕</h1>
-  <img class="screen-img" src="https://github.com/Nilambari-Mahajan/nilambariA/blob/main/imgserprise.jpg" alt="Birthday Cake">
+  <img class="screen-img" src="https://raw.githubusercontent.com/Nilambari-Mahajan/nilambariA/main/imgserprise.jpg" alt="Birthday Cake">
   <p>little Surprise from me </p>
   <button onclick="showScreen('screen2')">Start</button>
 </div>
@@ -435,4 +435,5 @@ audio.addEventListener('error', function() {
 </body>
 
 </html>
+
 
