Refactor birthday celebration HTML structure
The HTML document has been updated with a new structure, including multiple screens for a birthday celebration experience. Changes include audio elements, gift selection screens, and animations for candles and petals.

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 
 <!-- Audio element for birthday song (hidden) -->
 <audio id="birthdaySong" loop>
-  <source src="https://github.com/Nilambari-Mahajan/nilambariA/blob/main/happy-birthday-314197.mp3" type="audio/mpeg">
+  <source src="https://raw.githubusercontent.com/Nilambari-Mahajan/nilambariA/main/happy-birthday-314197.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
 </audio>
 
@@ -212,7 +212,7 @@
 <div id="screen2" class="screen">
   <button class="back-btn" onclick="showScreen('screen1')">← Back</button>
   <h2>Will you accept my gift? 💌</h2>
-  <img class="screen-img" src="https://github.com/Nilambari-Mahajan/nilambariA/blob/main/imggfritn.jpg" alt="Gift Box">
+  <img class="screen-img" src="https://raw.githubusercontent.com/Nilambari-Mahajan/nilambariA/main/imggfritn.jpg" alt="Gift Box">
   <p> </p>
   <button onclick="showScreen('screen3')">YES</button>
   <button onclick="showScreen('angry')">No</button>
@@ -224,13 +224,13 @@
   <h2>Choose Any one!!</h2>
   <div class="gift-grid">
     <div class="gift-box" onclick="showScreen('memories')">
-      <img src="https://github.com/Nilambari-Mahajan/nilambariA/blob/main/imggg1.jpg" alt="Memories">
+      <img src="https://raw.githubusercontent.com/Nilambari-Mahajan/nilambariA/main/imggg1.jpg" alt="Memories">
     </div>
     <div class="gift-box" onclick="showScreen('candle')">
-      <img src="https://github.com/Nilambari-Mahajan/nilambariA/blob/main/imgg2.jpg" alt="Cake">
+      <img src="https://raw.githubusercontent.com/Nilambari-Mahajan/nilambariA/main/imgg2.jpg" alt="Cake">
     </div>
     <div class="gift-box" onclick="showScreen('loveletter')">
-      <img src="https://github.com/Nilambari-Mahajan/nilambariA/blob/main/imgg3.jpg" alt="Letter">
+      <img src="https://raw.githubusercontent.com/Nilambari-Mahajan/nilambariA/main/imgg3.jpg" alt="Letter">
     </div>
   </div>
 </div>
@@ -435,5 +435,6 @@ audio.addEventListener('error', function() {
 </body>
 
 </html>
+
 
 
